public/css/eventsListOnProfile.css
section {
    width: 100%;
}

/* Empty box for the area of header */
section>div:first-child {
    height: 65px;
}

#myEventsWrapper>div:first-child {
    display: flex;
    justify-content: space-around;
    height: 30px;
    margin-bottom: 10px;
}

#myEventsWrapper .selected {
    border-bottom: 5px solid #FF3864; /* #72ddf7 */
    font-family: "MontserratBold", sans-serif;
}

/* No Events */
.noEvents {
    font-family: "MontserratBold", sans-serif;
    padding: 40px;
    padding-top: 20px;
}
.noEventsSub {
    font-family: "Montserrat", sans-serif;
    padding: 0 40px;
    padding-bottom: 20px;
}

/* Event Item */
.item {
    border: 1px solid #9C9C9C;
    border-radius: 20px;
    padding: 0 20px;
    margin-bottom: 10px;
    cursor: pointer;
    
}
.item .imgContainer {
    width: 100px;
    height: 80px;
    margin-right: 5%;
    border-radius: 10px;
    display: flex; 
    justify-content: center; 
    align-items: center; 
}
.item .imgContainer>img {
    border-radius: 5px;
    max-width: 100%; 
    max-height: 100%;
    margin-bottom: 5px;
}

@media screen and (max-width: 750px) {
    .item>.imgContainer {
        display: none;
    }
}

/* .item>.content {
    display: flex;
    flex-direction: column;

} */
.item>.content>div {
    padding-bottom: 0px;
}
.item .content {
    display: flex;
}
.item .rightContainer {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}
.item .date {
    color: #393E41;
    font-size: 0.9em;
    font-family: "MontserratBold", sans-serif;
}
.item .title {
    font-family: "MontserratBold", sans-serif;
    text-align: left;
    margin-top: 10px;
    margin-bottom: 5px;
}
.item .host {
    color: gray;
    font-size: 0.8em;
    font-family: "Montserrat", sans-serif;
}

